@@ -4,6 +4,7 @@
    seconds.
 2. Align mobile bottom nav texts.
 3. Fix mobile bottom nav layout with Firefox.
+4. Fix add-all/play-all from Genre albums list.
 
 1.1.1
 -----
